Typos & offensichtlicher Satzbau/Grammatik

--- a/Gerichtszusammensetzung.tex
+++ b/Gerichtszusammensetzung.tex
@@ -94,7 +94,7 @@ Dies würde Prozesstaktiken ermöglichen, die defacto einer parteigetriebenen Ri
 Daher muss davon ausgegangen werden, dass die entsprechende Satzungsbestimmung wegen Verstoß gegen das Verbot des Entzugs des gesetzlichen Richters unwirksam ist.\footnote{So schon \cite[299]{BVerfGE17294}: \Zitat{Art.~101 Abs.~1 Satz~2~GG soll der Gefahr vorbeugen, daß die Justiz durch eine Manipulierung der rechtsprechenden Organe sachfremden Einflüssen ausgesetzt wird, insbesondere daß im Einzelfall durch die Auswahl der zur Entscheidung berufenen Richter ad hoc das Ergebnis der Entscheidung beeinflußt wird, gleichgültig, von welcher Seite die Manipulierung ausgeht}.}
 Auch angesichts typischer Verfahrensdauern im Rahmen der erlaubten Verfahrensmaximalsolldauer ist jeder Zeitraum, der überhaupt zu einem temporären Ausscheiden eines Richters führt, schon so relevant, dass das Verfahren vom eingerückten Ersatzrichter maßgeblich mitbeeinflusst werden konnte.
 Daher muss auch dieser weiterhin dem Spruchkörper angehören.
-Entsprechend kann ein einmal ersetzter Richter nicht wieder in ein Verfahren zurückkehren, sobald den Parteien sein Ausscheiden und das Eintreten eines Ersatzrichters mitgeteilt wurde.\footnote{So auch etwa \cite[Eschelbach][\S~15 Rn~31]{BVerfGGMitarbeiterKommentar} entsprechend für das Bundesverfassungsgericht. Dieser geht davon aus, dass ein Rückkehr in die Richterolle im Spruchkörper für den Vorsitzenden nur dann möglich ist, wenn er lediglich in seiner Rolle als Vorsitzener etwa wegen Heiserkeit, nicht aber in der Rolle als Richter gänzlich wegfiel.}
+Entsprechend kann ein einmal ersetzter Richter nicht wieder in ein Verfahren zurückkehren, sobald den Parteien sein Ausscheiden und das Eintreten eines Ersatzrichters mitgeteilt wurde.\footnote{So auch etwa \cite[Eschelbach][\S~15 Rn~31]{BVerfGGMitarbeiterKommentar} entsprechend für das Bundesverfassungsgericht. Dieser geht davon aus, dass ein Rückkehr in die Richterolle im Spruchkörper für den Vorsitzenden nur dann möglich ist, wenn er lediglich in seiner Rolle als Vorsitzender etwa wegen Heiserkeit, nicht aber in der Rolle als Richter gänzlich wegfiel.}
 
 \subsection{Änderung durch Ausschluss eines Richters wegen Beurlaubung}
 \label{Zusammensetzung:Spruchkoerper:Urlaub}
@@ -116,7 +116,7 @@ Einen Antrag auf Ablehnung eines Richters wegen Besorgnis eines Richters kann nu
 
 Der Antrag muss immer eine Begründung enthalten, \S~5 Abs.~3 Satz~1 SGO\index[paridx]{SGO!5@\S~5!3@Abs.~3}, und sich gegen einene einzelnen Richter richten, andernfalls ist er unzulässig.\footnote{\cites[S.~1]{BSG201305062BefangenheitI}{BGHIIARZ101}.}
 Eine Ablehnung des ganzen Gerichts auf einmal ist also nicht möglich, allerdings können durchaus mehrere oder sogar alle Richter eines Gerichts jeweils einzeln nacheieinader abgelehnt werden.
-Entscheidend für die Bescheidungsreihenfolge ist ann die Reihenfolge der Antragstellung.
+Entscheidend für die Bescheidungsreihenfolge ist dann die Reihenfolge der Antragstellung.
 In besonderen Fällen ist sogar der Verweis auf die gleiche Begründung für mehrere Richter zulässig, nämlich immer dann, wenn vorgetragen wird, das die die Besorgnis der Befangenheit tragende Tatsache auf mehrere Richter jeweils individuell gleichzeitig zutrifft.
 In allen anderen Fällen ist der Ablehnungsantrag aber unzulässig und muss als solcher direkt abgewiesen werden.
 
@@ -134,8 +134,8 @@ Beiden Parteien daraufhin noch eine Gelegenheit zur Stellungnahme zu geben, \S~5
 Für den Beschluss, ob ein Richter im Verfahren bleibt, oder wegen Besorgnis der Befangenheit aus dem Verfahren ausscheidet, muss entschieden werden, ob ein neutraler, objektiver, fiktiver Dritter, der in Kenntnis der Tatsachen zu entscheiden hätte, einen gerechtfertigten Grund hätte, an dem Unparteilichkeit des Richters zu zweifeln, \S~5 Abs.~2 Satz~2.\index[paridx]{SGO!5@\S~5!2@Abs.~2}
 Dies ist noch nicht erfüllt, wenn der Richter einer speziellen parteiinternen Organisation oder einem Flügel angehört.\footnote{\cite[S.~6]{BSG115HSBefangeheitIII}.}
 Ebenfalls genügt dafür nicht, dass der Richter sich bereits früher mal über eine verfahrensrelevante Rechtsfrage geäußert hat,\footnote{\cite{BGHXIZR38801}.} die Partei muss dann damit leben, dass ihr gesetzlicher Richter in einem rechtlichen Meinungsstreit eine gewisse Position vertritt.
-Erst Recht gilt dies in einer Partei, die ihre Richter aus dem Pool aktiver Mitglieder rektrutiert.\footnote{\cites[Lenski][\S~14 Rn~15]{lenski2011parteiengesetz}.}
-Erst recht liegt keine Besorgnis der Befangenheit vor, weil eine Partei davon ausgeht, dass ein Richter anders als von ihr gewünscht entscheiden wird. Unerwünschte Entscheidungen sind bei Gerichten der Regelfall.\footnote{\cites[S.~2]{BSG201305062BefangenheitI}.}
+Erst Recht gilt dies in einer politischen Partei, die ihre Richter aus dem Pool aktiver Mitglieder rektrutiert.\footnote{\cites[Lenski][\S~14 Rn~15]{lenski2011parteiengesetz}.}
+Erst Recht liegt keine Besorgnis der Befangenheit vor, weil eine Partei davon ausgeht, dass ein Richter anders als von ihr gewünscht entscheiden wird. Unerwünschte Entscheidungen sind bei Gerichten der Regelfall.\footnote{\cites[S.~2]{BSG201305062BefangenheitI}.}
 
 \subsubsection{Rechtsmissbräuchlichkeit der Ablehnung}
 \label{Zusammensetzung:Spruchkoerper:Befangenheitsbesorgnis:Rechtsmissbrauch}
@@ -176,7 +176,7 @@ Die Anzeige löst auch sofort eine Bescheidungspflicht durch die anderen Richter
 \S~5 Abs.~2 Satz~4 SGO\index[paridx]{SGO!5@\S~5!2@Abs.~2} präkludiert Streitparteien davon, einen Richter abzulehnen, wenn der Grund für die Ablehnung schon ihr bekannt war und sie sich dennoch auf eine Verhandlung mit dem Richter eingelassen hat.
 Auf den satzungsmäßigem Ausschluss angewendet würde dies bedeuten, dass ein Richter, dem die Satzung objektiv und ohne Wertungsspielraum die Ausübung seines Amtes im Verfahren versagt ist, dennoch teilnehmen kann, wenn über den vorgetragenen Ausschlussgrund wegen Präklusion nicht mehr entschieden werden müsste.
 Dies kann jedoch keine gewollte Rechtsfolge sein, auch da der Richter diesen Grund schon hätte aufgrund seiner Anzeigepflicht mitteilen hätte müssen.
-Das der Ausschlussgrund für den Richter nicht erkennbar war und die Streitpartei daher prozesstaktisch Wissen zurückgehalten hat, ist angesichts der klaren und abschließenden Liste der möglichen Tatbestände nicht vorstellbar.
+Dass der Ausschlussgrund für den Richter nicht erkennbar war und die Streitpartei daher prozesstaktisch Wissen zurückgehalten hat, ist angesichts der klaren und abschließenden Liste der möglichen Tatbestände nicht vorstellbar.
 Auch müsste das Gericht, sobald es Kenntnis von der Möglichkeit eines satzungsmäßigen Ausschlussgrundes nach \S~5 Abs.~1 Satz~1 SGO\index[paridx]{SGO!5@\S~5!1@Abs.~1} hat, von Amts wegen über den Ausschluss entscheiden.
 Daher würde die Anwendung der Präklusionsregelung zu der absurden Situation führen, dass der Antrag der Streitpartei abgelehnt werden müsste, aber inhaltlich dennoch beschieden werden müsste.
 Dies kann keine gewollte Folge sein.
@@ -188,11 +188,11 @@ Das Begründungsgebot aus \S~5 Abs.~3 Satz~1 SGO\index[paridx]{SGO!5@\S~5!3@Abs.
 Wenn eine Partei der Ansicht ist, dass einer der Tatbestände aus \S~5 Abs.~1 Satz~1 SGO\index[paridx]{SGO!5@\S~5!1@Abs.~1} zutrifft, muss sie auch ausführen, welcher das ist und warum er zutrifft.
 Andernfalls könnte mit derartigen Anträgen das Gericht bis zum Rande der Arbeitsunfähigkeit blockiert werden, wenn die nicht betroffenen Richter im Wege der Amtsermittlung jeder Behauptung ohne den Ansatz einer Begründung nachgehen müssten.
 
-\subsubsection{Anwendung des Regelung zur dienstlichen Stellungnahme und Parteistellungnahme}
+\subsubsection{Anwendung der Regelung zur dienstlichen Stellungnahme und Parteistellungnahme}
 \label{Zusammensetzung:Spruchkoerper:Befangenheitsvermutung:Stellungnahme}
-Die dienstliche Stellungnahme selbst dient der Aufklärung des Tatbestandes und ist daher anzuwenden.
+Die dienstliche Stellungnahme selbst dient der Aufklärung des Tatbestandes und ist daher abzugeben.
 Ebenfalls dient sie dazu, den Parteien ihre Stellungnahme jeweils erst zu ermöglichen.
-Diese wiederrum ist aus dem von der Verfassung garantierten Recht auf rechtliches Gehör nach Art.~103 Abs.~1 GG\index[paridx]{GG!Art.~103!Abs.~1} geboten.
+Diese wiederum ist wegen des von der Verfassung garantierten Rechtes auf rechtliches Gehör nach Art.~103 Abs.~1 GG\index[paridx]{GG!Art.~103!Abs.~1} geboten.
 Es wird über eine Änderung ihrer Gerichtsbesetzung entschieden, daher sind die Parteien anzuhören.
 Die Regelung über die dienstliche Stellungnahme und die abschließenden Parteistellungnahme nach \S~5 Abs.~2 Satz~2, 3 SGO.\index[paridx]{SGO!5@\S~5!2@Abs.~2}
 
@@ -212,10 +212,10 @@ Sobald der Tatbestand erfüllt ist, ist ein Richter von der Mitwirkung ausgeschl
 
 Die Regelung ist an die staatlichen Prozessordnungen angelehnt.\footnote{Vgl. etwa \S~41 ZPO\index[paridx]{ZPO!\S~41},  \S~22 StPO\index[paridx]{StPO!\S~22}\nomenclature{StPO}{Strafprozessordnung}, \S~54 VwGO\index[paridx]{VwGO!\S~54}\nomenclature{VwGO}{Verwaltungsgerichtsordnung}, \S~51 FGO\index[paridx]{FGO!\S~51}\nomenclature{FGO}{Finanzgerichtsordnung}, \S~60 SGG\index[paridx]{SGG!\S~60}\nomenclature{SGG}{Sozialgerichtsgesetz} und \S~19 BVerfGG\index[paridx]{BVerfGG!\S~19}\nomenclature{BVerfGG}{Bundesverfassungsgerichtsgesetz}.}
 Diese Regelungen kommen aufgrund der vom Satzungsgeber getätigten Regelung in \S~5 Abs.~1 SGO\index[paridx]{SGO!5@\S~5!1@Abs.~1}.
-Grundsätzlich lässt sich sagen, dass eine Richterablehnung, die nicht durch einen Antrag auf Festsstellung der Besorgnis der Befangenheit nach \S~5 Abs.~2 Satz 1 Alt.~1, Satz~2 SGO\index[paridx]{SGO!5@\S~5!2@Abs.~2} gefüllt werden darf.
+Grundsätzlich lässt sich sagen, dass eine Richterablehnung, die nicht durch einen Antrag auf Feststellung der Besorgnis der Befangenheit nach \S~5 Abs.~2 Satz 1 Alt.~1, Satz~2 SGO\index[paridx]{SGO!5@\S~5!2@Abs.~2} gefüllt werden darf.
 Daher ist die Richterablehnung tatsächlich ein Gebiet der SGO, in der von einer vollständigen Regelung des Satzungsgebers auszugehen ist und Analogien grundsätzlich nicht in Betracht kommen.
 
-Die Tatbestände des \S~5 Abs.~1 SGO\index[paridx]{SGO!5@\S~5!1@Abs.~1} gliedern sich in drei Gruppen.
+Die Tatbestände des \S~5 Abs.~1 SGO\index[paridx]{SGO!5@\S~5!1@Abs.~1} gliedern sich in drei Gruppen (Nr.~1--5, Nr.~6--7, Nr.~8).
 
 Die erste Gruppe von Tatbeständen (Nr.~1 -- Nr.~5) erfassen Konstellationen, in denen die Satzung dem Richter aufgrund seiner persönlichen Nähe zu den \textbf{Verfahrensparteien} nicht zutraut, einen Fall neutral bewerten zu können, ohne dass der Entscheidung der Makel dess Misstrauens der Unparteilichkeit des Richters anhaftet.
 Die Gruppe lässt sich nochmal in zwei Untergruppen unterteilen:
@@ -240,7 +240,7 @@ Das ergibt sich einerseits aus der Alternativnennung zur Ehepartnerschaft und ih
 Es wäre einem Richter, der verpflichtet ist, das Erfülltsein des Tatbestandes nach \S~5 Abs.~2 Satz~3 SGO\index[paridx]{SGO!5@\S~5!2@Abs.~2} offenzulegen, auch nicht zuzumuten, jegliche frühere Beziehung in seinem Leben in einem Verfahren offenzulegen, wenn keinerlei sonstiger Bezug zum konkreten Verfahren besteht.
 Auch würde der Satzung offensichtlich eine Definition fehlen, wann eine Lebenspartnerschaft beginnt und endet.
 Ein solch unbestimmter Begriff wäre angesichts der eingriffsintensiven Rechtsfolge der absolut unwiderleglichen Befangenheitsvermutung schon eng auszulegen.
-All dies spricht letzliche dafür, dass der Satzungsgeber hier keine länge andauernde Beziehung gemeint ist, sondern nur die verrechtlichte Lebenspartnerschaft nach Lebenspartnerschaftsgesetz.
+All dies spricht letzliche dafür, dass der Satzungsgeber hier keine länger andauernde Beziehung gemeint hat, sondern nur die verrechtlichte Lebenspartnerschaft nach Lebenspartnerschaftsgesetz.
 
 \subsubsection{Tatbestand \S~5 Abs.~1 Satz~1 Nr.~3 SGO\index[paridx]{SGO!5@\S~5!1@Abs.~1}}
 \label{Zusammensetzung:Spruchkoerper:Befangenheitsvermutung:Nr3}
