--- a/Anrufung.tex
+++ b/Anrufung.tex
@@ -81,14 +81,14 @@ Daher kann fast davon ausgegangen werden, dass es nicht zu einer solchen Klageko
 
 Fraglich ist zudem ob die Partei bzw. die einzelnen Gliederungen Parteifähig im Sinne der SGO sind.
 Während dies für Prozesse vor staatlichen Gerichten aufgrund der dortigen Regelungen zur Parteifähigkeit\footnote{Vgl. etwa \S~50 ZPO\nomenclature{ZPO}{Zivilprozessordnung}\index[paridx]{ZPO!\S~50}.} grundsätzlich anzunehmen ist, spielt die Partei bzw. Gliederung als solche im internen Rechtsstreit eine untergeordnete Rolle, da die Handlung immer zumindest einem Organ oder zumindest Amtsträger zugeordnet werden kann.
-Daher ist auch das Bundesschiedsgericht in seiner Rechtsprechung dazu übergegangen, die Parteifähigkeit der Partei und ihrer Gliederungen nur zu bejahen, wenn eine derartige Zurechnung nicht möglich ist.\footnote{Vgl. \cite[S. 4]{BSG1614HS}; Diese Rechsprechung fortführend \cite[S. 2]{BSG3815HS} mwN.}
+Daher ist auch das Bundesschiedsgericht in seiner Rechtsprechung dazu übergegangen, die Parteifähigkeit der Partei und ihrer Gliederungen nur zu bejahen, wenn eine derartige Zurechnung nicht möglich ist.\footnote{Vgl. \cite[S. 4]{BSG1614HS}; Diese Rechsprechung fortführend \cite[S. 2]{BSG3815HS} m.w.N.}
 Die Partei und die Gliederungen kommen also nur als subsidiärer Antragsgegner bzw. Antragsgegnerin in Betracht.
 
 \subsection{Anschrift}
 \label{Anrufung:Statthaftigkeit:Anschrift}
 Der Antragsteller muss seine eigene Anschrift sowie die des Antragsgegners angeben.
 Die Anschrift ist notwendig, damit das Schiedsgericht im Verfahren mit den Parteien in Kontakt treten kann.
-Auch wenn die Kommunikation per E-Mail im Verfahren üblich ist, ist es hier notwendig, dass eine postalische Adresse genannt wird.\footnote{Ausführlich dazu \cite[S. 3]{BSG20130715} mwN.}
+Auch wenn die Kommunikation per E-Mail im Verfahren üblich ist, ist es hier notwendig, dass eine postalische Adresse genannt wird.\footnote{Ausführlich dazu \cite[S. 3]{BSG20130715} m.w.N.}
 So gibt es zwar keinen Anspruch mehr in der SGO auf eine Urteilszusendung in Schriftform, die die Kenntnis einer postalischen Adresse früher zwingend machte, jedoch ist die Anschrift nach wie vor zur Individualisierung und damit zur Mitgliedsverifikation durch das Schiedsgericht erforderlich. Auch im Fall, dass eine Person mittels einer lediglich vom Verfahrensgegner genannten E-Mailadresse nicht erreichbar ist, ist eine zusätzlicher Kontaktversuch per Brief erforderlich, um die Rechte der nicht erreichbaren Verfahrenspartei zu sichern.
 
 Da es allerdings nicht die Erforderlichkeit, den Ansprüchen einer ladungsfähigen Adresse genügen zu müssen, ist eine Postfachanschrift ausreichend und erfüllt die Anforderungen der Schiedsgerichtsordnung.\footnote{Mit Begründung etwa \cites[3]{BSG20130715}[S.~4 Rn~16]{LSGBB145}{LSGBB134}. Lediglich bestätigend etwa \cites[7]{LSGBB133}[S.~10~f. Rn~48]{LSGBB146}.}
