fixed shortcourt entry

--- a/sghandbuch.bib
+++ b/sghandbuch.bib
@@ -245,7 +245,7 @@
 }
 @RULING{LSGBYB413U,
   court = {Landesschiedsgericht~Bayern},
-  shortcourt = {LSG~HE},
+  shortcourt = {LSG~BY},
   decisiontype = {Beschluss},
   sign = {LSG-BY-B 4/13 U},
   date = {2014-01-25},
